# Quest-for-Data-codebase

./: .gitignore  BUGS.md  DECISIONS.md  HOW-IT-WORKS.md  WINDOWS_PHASE.md  main.cpp  package-lock.json  package.json  play-windows.bat  test.cpp  tsconfig.json  vite.config.ts
.github/workflows/: windows.yml
app/: index.html  main.ts  preload.ts  renderer.js  saves.ts
content/: classes.json  codex.json  sprites.json
content/sandpit/: drill-allies-beyond-the-wall.yaml  drill-first-vessels.yaml  drill-five-bindings.yaml  drill-offerings-and-vessels.yaml  drill-one-deed-one-spell.yaml  drill-rites-of-order.yaml  drill-signs-of-power.yaml  drill-the-book-of-declarations.yaml  drill-the-bounded-life.yaml  drill-the-city-of-names.yaml  drill-the-doubling-rite.yaml  drill-the-flow-of-echoes.yaml  drill-the-forgemasters-trial.yaml  drill-the-herald-of-forms.yaml  drill-the-law-of-names.yaml  drill-the-living-formula.yaml  drill-the-returned-gift.yaml  drill-the-sealed-tome.yaml  drill-the-shape-of-clarity.yaml  drill-the-silent-deed.yaml  drill-the-silent-script.yaml  drill-the-summoning.yaml  drill-the-unbound-spirit.yaml  drill-the-unseen-scribe.yaml  essence-of-type-sp.yaml  lesson-the-bell.yaml  lesson-the-first-words.yaml  lesson-the-vessel.yaml  (+5 more)
gameapi/: bestiary_main.cpp  combat_main.cpp  corridor_flurry_main.cpp  crossroads_gate_main.cpp  crypt_bind_main.cpp  crypt_rift_main.cpp  crypt_smart_main.cpp  forge_allies.cpp  forge_allies.h  forge_ally.cpp  forge_attack_main.cpp  forge_composition_main.cpp  forge_overload_main.cpp  forge_parameters_main.cpp  forge_warcry_main.cpp  gameapi.cpp  gameapi.h  leakcheck.cpp  monsters.h  spellbook_check.cpp  spellbook_template.h
sandbox_run/: CMakeLists.txt
sandbox_run/cmake/: mingw-w64-x86_64.cmake
sandbox_run/src/: main.cpp  sandbox.h  sandbox_posix.cpp  sandbox_win.cpp
sandbox_run/tests/: echo_fixture.cpp  memory_fixture.cpp  output_test.cpp  stack_overflow_fixture.cpp  test_memory.cpp  test_stack_overflow.cpp  test_timeout.cpp  timeout_fixture.cpp
schemas/: classes.schema.json  lesson.schema.json  save.schema.json  sprites.schema.json
scripts/: accept-phase0.ts  accept-phase1.ts  accept-phase2.ts  accept-phase3.ts  accept-phase4.ts  check-no-hardcoded-sprites.sh  e2e-drive.ts  electron-smoke-debug.ts  electron-smoke.ts  fetch-toolchain.ts  lesson-linter.js  lesson-runner.js  smoke-gameapi.ts  test-smoke.js  validate-content.ts  validate-gold-lessons.js  validate-gold-lessons.ts  validate-lessons.ts  verify-toolchain.js  verify-toolchain.ts
tests/: basic.test.ts  combat.test.ts  combat_test_harness.cpp  combat_test_helpers.ts  error-table.test.ts  phase0.test.ts  sandbox.test.ts  saves.test.ts  setup.ts  substitution.test.ts  teaching-fields.test.ts
toolchain/: toolchain.lock.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+140 files in other folders)
